[package]
name          = "neutron-proto"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default        = ["grpc-transport"]
grpc           = ["tonic", "cosmos-sdk-proto/grpc"]
grpc-transport = ["grpc", "tonic/transport", "cosmos-sdk-proto/grpc-transport"]

[dependencies]
cosmos-sdk-proto = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
tendermint-proto = { workspace = true }
tonic            = { workspace = true, optional = true, features = ["codegen", "prost"] }

[dev-dependencies]
tokio = { workspace = true }
