[package]
name          = "proto-build"
authors       = [
  "Justin Kilpatrick <justin@althea.net>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Larry Lyu <gm@larry.engineer>",
]
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
publish       = false

[dependencies]
prost       = { workspace = true }
prost-build = { workspace = true }
regex       = { workspace = true }
tonic       = { workspace = true }
tonic-build = { workspace = true }
walkdir     = { workspace = true }
